# relax-py

./: .gitignore  404.html  LICENSE  README.md  example.py  html_parser.py  index.html  lol.html  main.py  mkdocs.yml  pyproject.toml  test.html  test.py  todo.md  try.sh
docs/: about.md  index.md  other.md
other/: index.html
relax/: app.py  config.py  html.py  injection.py  injection.pyi  server.py  test.py  test.pyi
relax/js/: hmr_reload.js
scripts/: lint.sh
search/: search_index.json
tests/: test.py
tests/unit/: test.py
tests/unit/html/: test.py
tests/unit/injection/: test_component.py  test_injecable_sync.py
yahgl_py/: app.py  html.py  injection.py  injection.pyi  main.py
